# OpenYSM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
jni/: jni_md.h
src/main/java/com/elfmcys/yesstevemodel/: NativeLibLoader.java  YesSteveModel.java
src/main/java/com/elfmcys/yesstevemodel/audio/: AudioPlayerManager.java  YSMTickableSoundInstance.java
src/main/java/com/elfmcys/yesstevemodel/capability/: AuthModelsCapability.java  AuthModelsCapabilityProvider.java  ClientLazyCapability.java  ClientLazyCapabilityProvider.java  ModelInfoCapability.java  ModelInfoCapabilityProvider.java  PlayerCapability.java  PlayerCapabilityProvider.java  ProjectileCapability.java  ProjectileCapabilityProvider.java  ProjectileModelCapability.java  ProjectileModelCapabilityProvider.java  StarModelsCapability.java  StarModelsCapabilityProvider.java  VehicleCapability.java  VehicleCapabilityProvider.java  VehicleModelCapability.java  VehicleModelCapabilityProvider.java
src/main/java/com/elfmcys/yesstevemodel/client/: ClientModelManager.java
src/main/java/com/elfmcys/yesstevemodel/client/animation/: AnimationManager.java
src/main/java/com/elfmcys/yesstevemodel/client/entity/: CustomPlayerEntity.java  GeckoProjectileEntity.java  GeckoVehicleEntity.java  GeoEntity.java  IPreviewAnimatable.java  LivingAnimatable.java  LivingEntityFrameState.java  PlayerEntityFrameState.java  PlayerGeoEntity.java  PlayerPreviewEntity.java  VehicleRotationController.java
src/main/java/com/elfmcys/yesstevemodel/client/event/: AnimationLockEvent.java  ClientPlayerCloneEvent.java  ClientPlayerJoinNotification.java  ClientSetupEvent.java  ClientTickEvent.java  MobEffectEvent.java  ModScreenEvent.java  PlayerSkinTextureManager.java  RenderFirstPlayerBackground.java  ReplacePlayerHandRenderEvent.java  ReplacePlayerRenderEvent.java  ShieldBlockCooldownEvent.java
src/main/java/com/elfmcys/yesstevemodel/client/gui/: AnimationRouletteScreen.java  DebugAnimationScreen.java  DisclaimerScreen.java  ExtraPlayerConfigScreen.java  ExtraPlayerRenderScreen.java  IGuiWidget.java  ModelInfoScreen.java  OpenModelFolderScreen.java  PauseScreenButtonBuilder.java  PlayerModelScreen.java  PlayerTextureScreen.java  TouhouMaidModelScreen.java  TouhouMaidTextureScreen.java
src/main/java/com/elfmcys/yesstevemodel/command/: RootClientCommand.java
src/main/java/com/elfmcys/yesstevemodel/config/: ModSoundEvents.java
src/main/java/com/elfmcys/yesstevemodel/event/: CapabilityEvent.java  CommandRegistry.java  CommonEvent.java  EnterServerEvent.java  EntityJoinCallbackEvent.java  PlayerLogoutEvent.java  ServerStartupEvent.java
src/main/java/com/elfmcys/yesstevemodel/mixin/: AbstractArrowEntityMixin.java  ProjectileEntityMixin.java
src/main/java/com/elfmcys/yesstevemodel/model/: ServerModelManager.java
src/main/java/com/elfmcys/yesstevemodel/network/: NetworkHandler.java
src/main/java/com/elfmcys/yesstevemodel/resource/: YSMBinaryDeserializer.java  YSMBinarySerializer.java  YSMClientMapper.java  YSMFolderDeserializer.java
src/main/java/com/elfmcys/yesstevemodel/util/: AnimatableCacheUtil.java  CameraUtil.java  FileTypeUtil.java  InputUtil.java  ItemTagsConstants.java  ParticleEffectUtil.java  TickCounter.java  YSMMessageFormatter.java  YSMNativeHelper.java  YSMThreadPool.java
src/main/java/rip/ysm/legacy/: YesModelUtils.java
src/main/native/: render.cpp
src/main/resources/: pack.mcmeta  yes_steve_model.mixins.json
(+175 files in other folders)
